concord_macros/tests/v5/dsl/fail/fail_attempts_removed.stderr
error: `attempts` was renamed to `max_attempts` in v5
 --> tests/v5/dsl/fail/fail_attempts_removed.rs:9:22
  |
9 |             attempts 2
  |                      ^

warning: unused import: `concord_core::prelude::*`
 --> tests/v5/dsl/fail/fail_attempts_removed.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
